--- a/packages/locale/package.json
+++ b/packages/locale/package.json
@@ -11,7 +11,7 @@
     "test": "mocha",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
-    "format": "prettier --config .prettierrc src/**/*.ts --write",
+    "format": "prettier src/**/*.ts --write",
     "build": "rimraf dist && tsc --build",
     "prepublishOnly": "npm run build"
   },
@@ -39,13 +39,8 @@
     "@tsconfig/recommended": "^1.0.3",
     "@types/lodash.clonedeep": "^4.5.6",
     "@types/node": "^16.10.1",
-    "@typescript-eslint/eslint-plugin": "^6.11.0",
-    "@typescript-eslint/parser": "^6.11.0",
     "chai": "^4.3.4",
     "eslint": "^8.53.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-sonarjs": "^0.23.0",
     "mocha": "^9.1.2",
     "prettier": "^3.1.0",
     "rimraf": "^5.0.5",
