--- a/packages/locale/package.json
+++ b/packages/locale/package.json
@@ -38,8 +38,9 @@
     "@qualweb/types": "0.7.26",
     "@tsconfig/recommended": "^1.0.3",
     "@types/lodash.clonedeep": "^4.5.9",
+    "@types/mocha": "^10.0.6",
     "@types/node": "^16.10.1",
-    "chai": "^5.0.0",
+    "chai": "^4.4.1",
     "eslint": "^8.56.0",
     "mocha": "^10.2.0",
     "prettier": "^3.1.1",
