--- a/packages/locale/src/locales/fi.json
+++ b/packages/locale/src/locales/fi.json
@@ -687,6 +687,15 @@
         "F1": "Elementin kontrasti ei täytä vähimmäisvaatimuksia.",
         "F2": "Elementin kontrasti taustan liukuvärin kanssa ei täytä vähimmäisvaatimuksia."
       }
+    },
+    "QW-ACT-R77": {
+      "name": "ARIA required ID references exist",
+      "description": "This rule checks that every ID reference required by WAI-ARIA exists.",
+      "results": {
+        "I1": "No test targets found.",
+        "P1": "Referenced element exists.",
+        "F1": "Referenced element does not exist."
+      }
     }
   },
   "wcag-techniques": {
