--- a/packages/locale/src/locales/sv.json
+++ b/packages/locale/src/locales/sv.json
@@ -687,6 +687,15 @@
         "F1": "Elementets kontrast uppfyller inte minimikraven.",
         "F2": "Elementets kontrast mot bakgrundens gradientfärg uppfyller inte minimikraven."
       }
+    },
+    "QW-ACT-R77": {
+      "name": "ARIA required ID references exist",
+      "description": "This rule checks that every ID reference required by WAI-ARIA exists.",
+      "results": {
+        "I1": "No test targets found.",
+        "P1": "Referenced element exists.",
+        "F1": "Referenced element does not exist."
+      }
     }
   },
   "wcag-techniques": {
