--- a/packages/locale/package.json
+++ b/packages/locale/package.json
@@ -2,19 +2,19 @@
   "name": "@qualweb/locale",
   "version": "0.1.18",
   "description": "Locales for @qualweb/core evaluation reports.",
-  "main": "dist/index.js",
+  "main": "dist/locale.bundle.js",
   "files": [
     "dist/*"
   ],
-  "types": "dist/index.d.ts",
+  "types": "prebuild/index.d.ts",
   "scripts": {
     "tsc": "tsc",
     "test": "mocha",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "format": "prettier src/**/*.ts --write",
-    "prebuild": "rimraf dist",
-    "build": "tsc --build tsconfig.prod.json",
+    "prebuild": "rimraf prebuild && tsc --build tsconfig.prod.json",
+    "build": "rimraf dist && npm run prebuild && webpack",
     "prepublishOnly": "npm run build"
   },
   "homepage": "https://github.com/qualweb/locale#readme",
