--- a/packages/locale/src/locales/nn.json
+++ b/packages/locale/src/locales/nn.json
@@ -612,7 +612,7 @@
         }
       },
       "QW-ACT-R70": {
-        "name": "iframe-element med negativ tabindex har ingen interaktive element.",
+        "name": "iframe-element med negativ tabindex har ingen interaktive element",
         "description": "Denne regelen sjekkar om `iframe`-element med ein negativ `tabindex`-attributtverdi inneheld interaktive element.",
         "results": {
           "I1": "Testobjekt ikkje funne.",
@@ -631,7 +631,7 @@
         }
       },
       "QW-ACT-R72": {
-        "name": "Første fokuserbare element på nettsida er ei lenke til ikkje-gjenteke innhald.",
+        "name": "Første fokuserbare element på nettsida er ei lenke til ikkje-gjenteke innhald",
         "description": "Denne regelen sjekkar om første fokuserbare element på nettsia er ei lenke til ikkje-gjenteke innhald.",
         "results": {
           "I1": "Testobjekt ikkje funne.",
@@ -688,12 +688,12 @@
         }
       },
       "QW-ACT-R77": {
-        "name": "ARIA required ID references exist",
-        "description": "This rule checks that every ID reference required by WAI-ARIA exists.",
+        "name": "ARIA-påkravde ID-referansar finst",
+        "description": "Denne regelen sjekkar at kvar ID-referanse som blir kravd av WAI-ARIA, finst.",
         "results": {
-          "I1": "No test targets found.",
-          "P1": "Referenced element exists.",
-          "F1": "Referenced element does not exist."
+          "I1": "Testobjekt ikkje funne.",
+          "P1": "Referert element finst.",
+          "F1": "Referert element finst ikkje."
         }
       }
     },
