chore(locale): properly export bundle file when Node environments import

--- a/packages/locale/package.json
+++ b/packages/locale/package.json
@@ -7,7 +7,10 @@
     "dist/*"
   ],
   "exports": {
-    "types": "./prebuild/index.d.ts"
+    ".": {
+      "require": "./dist/locale.bundle.js",
+      "types": "./prebuild/index.d.ts"
+    }
   },
   "scripts": {
     "tsc": "tsc",
