--- a/packages/locale/package.json
+++ b/packages/locale/package.json
@@ -43,7 +43,7 @@
     "@types/lodash.clonedeep": "^4.5.9",
     "@types/mocha": "^10.0.6",
     "@types/node": "^16.10.1",
-    "chai": "^4.4.1",
+    "chai": "4.5.0",
     "eslint": "^8.56.0",
     "mocha": "^10.2.0",
     "prettier": "^3.1.1",
