--- a/packages/locale/package.json
+++ b/packages/locale/package.json
@@ -14,8 +14,7 @@
   "scripts": {
     "tsc": "tsc",
     "test": "mocha",
-    "lint": "eslint src --ext .ts",
-    "lint:fix": "eslint src --ext .ts --fix",
+    "lint": "eslint .",
     "format": "prettier src/**/*.ts --write",
     "prebuild": "rimraf prebuild && tsc --build tsconfig.prod.json",
     "build": "rimraf dist && npm run prebuild && webpack",
@@ -44,7 +43,6 @@
     "@types/mocha": "^10.0.6",
     "@types/node": "^16.10.1",
     "chai": "4.5.0",
-    "eslint": "^8.56.0",
     "mocha": "^10.2.0",
     "prettier": "^3.1.1",
     "rimraf": "^5.0.5",
