--- a/packages/locale/package.json
+++ b/packages/locale/package.json
@@ -20,7 +20,7 @@
     "build": "tsc --build tsconfig.prod.json && webpack",
     "prepublishOnly": "npm run build"
   },
-  "homepage": "https://github.com/qualweb/locale#readme",
+  "homepage": "https://github.com/qualweb/qualweb/blob/main/packages/locale",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/qualweb/qualweb.git",
