fix(exports): change exports in package.json file to work in projects with type module set

--- a/packages/locale/package.json
+++ b/packages/locale/package.json
@@ -7,7 +7,7 @@
   ],
   "exports": {
     ".": {
-      "require": "./dist/locale.bundle.js",
+      "default": "./dist/locale.bundle.js",
       "types": "./prebuild/index.d.ts"
     }
   },
